--- a/public/read.html
+++ b/public/read.html
@@ -6,18 +6,30 @@
 	<meta name="description" content="VOM">
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	
-		지점 : <input type="text" id="branch" readonly="" /><br/>
-		PU &nbsp;&nbsp;: <input type="text" id="pu" readonly="" /><br/>
-		제목 : <input type="text" id="title" readonly="" /><br/>
-		내용 : <textarea rows="10" cols="20" id="content" readonly=""></textarea><br/>
-		<div>
-			<img id="profileImg" />
-		</div>
-		<div align="left">
-			<a href="index.html">목록으로</a>	
+		<div style="margin-left: 20px">
+			<div class="div_rw_top">
+				<p style="font-size: 25px" id="p_title"></p>
+				<p style="font-size: 15px; margin-top: -18px;" id="p_subtitle"></p>
+			</div>
+			
+			<hr style="width: 93%">
+			<textarea rows="10" cols="20" id="content" readonly=""></textarea><br/>
+			<hr style="width: 93%">
+			
+			<div style="width : 80%; margin-left: 7%">
+				<img id="profileImg" />
+			</div>
+			
+			<a href="index.html">
+				<div id="a_backToList">
+					목록으로
+				</div>
+			</a>
+			<br><br>
 		</div>
 	
 <script type="text/javascript">
@@ -46,9 +58,14 @@
 				objItem.bPublic = item.get("Public");
 				objItem.file = item.get("File");
 
+				/*
 				document.getElementById('branch').value = objItem.strBranch;
-				document.getElementById('pu').value = objItem.strPU;
-				document.getElementById('title').value = objItem.strTitle;
+								document.getElementById('pu').value = objItem.strPU;
+								document.getElementById('title').value = objItem.strTitle;*/
+				
+				var strSubtitle = objItem.strBranch + " " + objItem.strPU;
+				document.getElementById('p_title').innerHTML = objItem.strTitle;
+				document.getElementById('p_subtitle').innerHTML = strSubtitle;
 				document.getElementById('content').value = objItem.strContent;
 
 				$("#profileImg")[0].src = objItem.file.url();
