--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
 	<script type="text/javascript" src="scroll/jquery.jscroll.min.js"></script>
 	<script type="text/javascript" src="common.js"></script>
+	<script type="text/javascript" src="index.js"></script>
 <!--	<script type="text/javascript" src="scroll/jscroll.jquery.json"></script>-->
 </head>
 
 <body>
-	
 	<div id="div_upper" style="z-index: -10">
 		<img src="img/upper.png">
 	</div>
@@ -33,52 +33,6 @@
 		<input id="input_srcWord" style="margin-left: 10px; width: 35%; height: 30px" type="text" placeholder="검색어 입력">
 		<button style="margin-left: 10px; height: 30px" onclick="doSearch()">검색</button>
 	</div>
-	<script type="text/javascript">
-		var mainDiv_pos;
-		var device_width;
-
-		Parse.initialize("VlzoLnwwdwKUwvKFUPEKSadvZlL6SeVmPuRDy8ac", "fxEr0NEeRaD6rfs80NEO21t6efQm3FwHwgwaQPuH");	
-		LoadAllItems(true);
-
-		function chgOpt2(){
-			var opt1;
-			opt1 = select_srcOption1.options[select_srcOption1.selectedIndex].value;
-			document.getElementById("select_srcOption2").innerHTML = "";
-
-			AddOption(opt1, 'select_srcOption2');
-		}
-		
-		// 검색 버튼 눌렀을 때 호출
-		function doSearch(){
-			var src_parentOptVal;	// 제목, 지점, 부서
-			var src_childOptVal;	// 지점 혹은 부서 선택 옵션 변수
-			var src_searchWord;	// 검색어 변수
-			
-			src_parentOptVal = select_srcOption1.options[select_srcOption1.selectedIndex].value;
-
-			if(src_parentOptVal != "Title"){
-				src_childOptVal = select_srcOption2.options[select_srcOption2.selectedIndex].innerHTML;
-			} else{
-				src_childOptVal = "";
-			}
-			
-			src_searchWord = document.getElementById("input_srcWord").value;
-			//alert("src_parentOptVal : " + src_parentOptVal + " / " + "src_childOptVal : " + src_childOptVal + " / " + "src_word : " + src_searchWord);
-
-			location.href="searched.html?parentOptVal=" + src_parentOptVal + "&childOptVal=" + src_childOptVal +"&searchWord=" + src_searchWord;
-		}
-		
-		$(function(){
-			mainDiv_pos = $('#div_upper').height();
-			device_width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
-			
-			$('#div_upper').css("width",device_width+"px");
-			$('#div_list').css("top",mainDiv_pos+25+"px");
-		});
-	
-		//UpdateItem("x9lbF8Uuvp", "분당점", "선물", "건의사항", "자율출근제를 도입합시다!", true);
-		//DeleteItem("x9lbF8Uuvp");
-	</script>
 </body>
 
 </html>
