- 자바스크립트로 #div_upper의 width 지정 코드 주석처리 - 모던하우스 이미지를 두 개(upper, line)으로 분리하여 line만 width를 100%로 처리

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 <body>
 	<div id="div_upper" style="z-index: -10">
 		<img src="img/upper.png">
+		<img id="img_line" src="img/line.png">
 	</div>
 	<div id="div_write"><a href="write.html">글쓰기</a></div>
 	
