--- a/public/read.html
+++ b/public/read.html
@@ -22,8 +22,8 @@
 			<hr style="width: 93%">
 			
 			<div style="width : 80%; margin-left: 7%">
-				<img id="file1" />
-				<img id="file2" />
+				<img class="upload_img" id="file1" />
+				<img class="upload_img" id="file2" />
 			</div>
 			
 			<a href="index.html">
