--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div id="div_upper" style="z-index: -10">
-		<img src="img/upper.png">
+		<a href="index.html"><img src="img/upper.png"></a>
 		<img id="img_line" src="img/line.png">
 	</div>
 	<div id="div_write"><a href="write.html">글쓰기</a></div>
