--- a/public/write.html
+++ b/public/write.html
@@ -7,6 +7,10 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
 	<script type="text/javascript" src="common.js"></script>
+	<script type="text/javascript" src="resample.js"></script>
+	<script type="text/javascript" src="base64.js"></script>
+	<script type="text/javascript" src="webtoolkit.base64.js"></script>
+	<script type="text/javascript" src="spin.js"></script>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
@@ -28,7 +32,7 @@
 			<div style="width: 100%; float: left">
 				<input type="checkbox" id="chkBox_pwd" onchange="setSecret()"><b style="font-size: 13px;">&nbsp;비밀글 설정</b> 
 				<input type="password" id="text_pwd" placeholder="비밀번호" disabled="disabled"><br/><br/>
-			</div>
+			</div>	
 			
 			<hr style="width: 93%">
 			<textarea rows="10" cols="20" id="content"></textarea><br/>
@@ -36,6 +40,12 @@
 			
 			<input type="file" id="file1"><br/>
 			<input type="file" id="file2"><br/>
+
+			<!-- <span id="message"></span><br /> -->
+			<div id="img1" style="display: none"></div>
+			<div id="img2" style="display: none"></div>
+			<div id="spinner"></div>
+
 			<div style="float: left; width: 100%; margin-bottom: 15px;">
 				<input id="btn_submit" type="button" value="확인" onclick="FormCheck()" />
 				<button id="btn_cancle" onclick="javascript:location='index.html'">취소</button>
@@ -52,6 +62,266 @@
 
 	AddOption('Branch', 'select_branch');
 	AddOption('PU', 'select_PU');
+
+	var img = new Array();
+	resizeImg(this, 800, 0, document.getElementById("file1"), document.getElementById("img1"), 0);
+	resizeImg(this, 800, 0, document.getElementById("file2"), document.getElementById("img2"), 1);
+
+/*
+	///(function (global, $width, $height, $file, $message, $img) {
+	(function (global, width, height, $file, $message, $img) {
+	  
+	  // (C) WebReflection Mit Style License
+	  
+	  // simple FileReader detection
+	  if (!global.FileReader)
+	   // no way to do what we are trying to do ...
+	   return $message.innerHTML = "FileReader API not supported";
+	  
+	  // async callback, received the
+	  // base 64 encoded resampled image
+	  function resampled(data) {
+	   $message.innerHTML = "done";
+	   ($img.lastChild || $img.appendChild(new Image)
+	   ).src = data;
+
+	   var strArray = data.split(',');
+	   asdf = strArray[1];
+
+
+	  }
+	  
+	  // async callback, fired when the image
+	  // file has been loaded
+	  function load(e) {
+	   $message.innerHTML = "resampling ...";
+	   // see resample.js
+	   Resample(
+		 this.result,
+		 this._width || null,
+		 this._height || null,
+		 resampled
+	   );
+	   
+	  }
+	  
+	  // async callback, fired if the operation
+	  // is aborted ( for whatever reason )
+	  function abort(e) {
+	   $message.innerHTML = "operation aborted";
+	  }
+	  
+	  // async callback, fired
+	  // if an error occur (i.e. security)
+	  function error(e) {
+	   $message.innerHTML = "Error: " + (this.result || e);
+	  }
+	  
+	  // listener for the input@file onchange
+	  $file.addEventListener("change", function change() {
+	   var
+		// retrieve the width in pixel
+		///width = parseInt($width.value, 10),
+		// retrieve the height in pixels
+		///height = parseInt($height.value, 10),
+		// temporary variable, different purposes
+		file
+	   ;
+	   // no width and height specified
+	   // or both are NaN
+	   if (!width && !height) {
+		// reset the input simply swapping it
+		$file.parentNode.replaceChild(
+		 file = $file.cloneNode(false),
+		 $file
+		);
+		// remove the listener to avoid leaks, if any
+		$file.removeEventListener("change", change, false);
+		// reassign the $file DOM pointer
+		// with the new input text and
+		// add the change listener
+		($file = file).addEventListener("change", change, false);
+		// notify user there was something wrong
+		$message.innerHTML = "please specify width or height";
+	   } else if(
+		// there is a files property
+		// and this has a length greater than 0
+		($file.files || []).length &&
+		// the first file in this list 
+		// has an image type, hopefully
+		// compatible with canvas and drawImage
+		// not strictly filtered in this example
+		/^image\//.test((file = $file.files[0]).type)
+	   ) {
+		// reading action notification
+		$message.innerHTML = "reading ...";
+		// create a new object
+		file = new FileReader;
+		// assign directly events
+		// as example, Chrome does not
+		// inherit EventTarget yet
+		// so addEventListener won't
+		// work as expected
+		file.onload = load;
+		file.onabort = abort;
+		file.onerror = error;
+		// cheap and easy place to store
+		// desired width and/or height
+		file._width = width;
+		file._height = height;
+		// time to read as base 64 encoded
+		// data te selected image
+		file.readAsDataURL($file.files[0]);
+		// it will notify onload when finished
+		// An onprogress listener could be added
+		// as well, not in this demo tho (I am lazy)
+	   } else if (file) {
+		// if file variable has been created
+		// during precedent checks, there is a file
+		// but the type is not the expected one
+		// wrong file type notification
+		$message.innerHTML = "please chose an image";
+	   } else {
+		// no file selected ... or no files at all
+		// there is really nothing to do here ...
+		$message.innerHTML = "nothing to do";
+	   }
+	  }, false);
+	 }(
+	  // the global object
+	  this,
+	  // all required fields ...
+	  ///document.getElementById("width"),
+	  ///document.getElementById("height"),
+	  200,
+	  0,
+	  document.getElementById("file1"),
+	  document.getElementById("message"),
+	  document.getElementById("img")
+	 ));
+*/
+
+	///(function (global, $width, $height, $file, $message, $img) {
+	function resizeImg(global, width, height, $file, $img, idx) {
+	  
+	  // (C) WebReflection Mit Style License
+	  
+	  // simple FileReader detection
+	  ///if (!global.FileReader)
+	   // no way to do what we are trying to do ...
+	   ///return $message.innerHTML = "FileReader API not supported";
+	  
+	  // async callback, received the
+	  // base 64 encoded resampled image
+	  function resampled(data) {
+	   ///$message.innerHTML = "done";
+	   ($img.lastChild || $img.appendChild(new Image)
+	   ).src = data;
+
+	   var strArray = data.split(',');
+	   img[idx] = strArray[1];
+	  }
+	  
+	  // async callback, fired when the image
+	  // file has been loaded
+	  function load(e) {
+	   ///$message.innerHTML = "resampling ...";
+	   // see resample.js
+	   Resample(
+		 this.result,
+		 this._width || null,
+		 this._height || null,
+		 resampled
+	   );
+	   
+	  }
+	  
+	  // async callback, fired if the operation
+	  // is aborted ( for whatever reason )
+	  function abort(e) {
+	   $message.innerHTML = "operation aborted";
+	  }
+	  
+	  // async callback, fired
+	  // if an error occur (i.e. security)
+	  function error(e) {
+	   ///$message.innerHTML = "Error: " + (this.result || e);
+	  }
+	  
+	  // listener for the input@file onchange
+	  $file.addEventListener("change", function change() {
+	   var
+		// retrieve the width in pixel
+		///width = parseInt($width.value, 10),
+		// retrieve the height in pixels
+		///height = parseInt($height.value, 10),
+		// temporary variable, different purposes
+		file
+	   ;
+	   // no width and height specified
+	   // or both are NaN
+	   if (!width && !height) {
+		// reset the input simply swapping it
+		$file.parentNode.replaceChild(
+		 file = $file.cloneNode(false),
+		 $file
+		);
+		// remove the listener to avoid leaks, if any
+		$file.removeEventListener("change", change, false);
+		// reassign the $file DOM pointer
+		// with the new input text and
+		// add the change listener
+		($file = file).addEventListener("change", change, false);
+		// notify user there was something wrong
+		///$message.innerHTML = "please specify width or height";
+	   } else if(
+		// there is a files property
+		// and this has a length greater than 0
+		($file.files || []).length &&
+		// the first file in this list 
+		// has an image type, hopefully
+		// compatible with canvas and drawImage
+		// not strictly filtered in this example
+		/^image\//.test((file = $file.files[0]).type)
+	   ) {
+		// reading action notification
+		///$message.innerHTML = "reading ...";
+		// create a new object
+		file = new FileReader;
+		// assign directly events
+		// as example, Chrome does not
+		// inherit EventTarget yet
+		// so addEventListener won't
+		// work as expected
+		file.onload = load;
+		file.onabort = abort;
+		file.onerror = error;
+		// cheap and easy place to store
+		// desired width and/or height
+		file._width = width;
+		file._height = height;
+		// time to read as base 64 encoded
+		// data te selected image
+		file.readAsDataURL($file.files[0]);
+		// it will notify onload when finished
+		// An onprogress listener could be added
+		// as well, not in this demo tho (I am lazy)
+	   } else if (file) {
+		// if file variable has been created
+		// during precedent checks, there is a file
+		// but the type is not the expected one
+		// wrong file type notification
+		///$message.innerHTML = "please chose an image";
+	   } else {
+		// no file selected ... or no files at all
+		// there is really nothing to do here ...
+		///$message.innerHTML = "nothing to do";
+	   }
+	  }, false);
+	 }
+
+
+
 			
 	function chgBranch(){
 		branch = select_branch.options[select_branch.selectedIndex].innerHTML;
@@ -69,7 +339,7 @@
 			document.getElementById("text_pwd").disabled = true;
 		}
 	}
-		
+
 	function FormCheck() {
 		var title = document.getElementById("title").value;	 
 		var content = document.getElementById("content").value;
@@ -100,8 +370,8 @@
 			return false;
 		}
 
-		parseFile1 = UploadFile('file1');
-		parseFile2 = UploadFile('file2');
+		parseFile1 = UploadFile('file1', 0);
+		parseFile2 = UploadFile('file2', 1);
 
 		if(parseFile1 === null && parseFile2 !== null) {
 			parseFile1 = parseFile2;
@@ -114,16 +384,19 @@
 		CreateItem(branch, pu, title, content, isPublic, pw, parseFile1, parseFile2);
 	}
 
-	function UploadFile(fileId) {
+	function UploadFile(fileId, idx) {
 		var fileUploadControl = $("#" + fileId)[0];
 		if (fileUploadControl.files.length > 0) {
 			var file = fileUploadControl.files[0];
-			var fullName = fileUploadControl.files[0].name;
+			var fullName = file.name;
 			var dotIdx = fullName.lastIndexOf(".");
 			//var name = fullName.substring(0, dotIdx);
-			var extName = fullName.substring(dotIdx + 1, fullName.length);
+			var extName = fullName.substring(dotIdx + 1, fullName.length);			
+			var parseFile = new Parse.File(fileId + "." + extName, {base64:img[idx]});
 
-			var parseFile = new Parse.File(fileId + "." + extName, file);
+			var target = document.getElementById('spinner');
+			var spinner = new Spinner().spin();
+			target.appendChild(spinner.el);
 
 			parseFile.save().then(function() {
 				// The file has been saved to Parse.
